cut vers.